[BUGFIX] Wrap iframe with div - otherwise lightbox get closed on click inside the iframe (for whatever reason)

--- a/Resources/Private/Sass/Frontend.scss
+++ b/Resources/Private/Sass/Frontend.scss
@@ -20,7 +20,7 @@
   padding-top: 10px;
 }
 
-.basicLightbox--iframe {
+.basicLightbox {
   iframe {
     background-color: $white;
   }
